Fixed stat bars being uneven

--- a/pages/cats/[id].module.css
+++ b/pages/cats/[id].module.css
@@ -51,6 +51,10 @@
   padding: 1rem 0;
 }
 
+.cat-stats__bars p {
+  width: 10rem;
+}
+
 .other-photos__title {
   padding-bottom: 2rem;
 }
